--- a/src/app/accueil/accueil.component.css
+++ b/src/app/accueil/accueil.component.css
@@ -7,7 +7,13 @@
   background-color: hwb(0 100% 0% / 0.137);
 }
 
-.navbar-nav .nav-link.active { color: #03998a; }
+.navbar-nav .nav-link.active { 
+  color: #eee;
+}
+.navbar-nav:hover .nav-link.active:hover { 
+  color: #92B9CD;
+  border-bottom: 1px solid  #92B9CD;
+}
 
 /* Section accueil */
 .accueil-image {
@@ -16,7 +22,7 @@
   height: 100vh;
   width: 100%;
   background-image: linear-gradient(to bottom, rgba(4,9,30,0.7),rgb(41 73 79 / 38%)),
-  url(/assets/images/DALL·E\ 2024-03-29\ 10.25.19\ -\ Imagine\ a\ vibrant\ and\ attractive\ tennis-themed\ background\ that\ could\ serve\ as\ the\ perfect\ backdrop\ for\ a\ sports\ application\ interface.\ This\ image\ shou.webp);
+  url(/assets/images/ping-pong.webp);
   background-position: center;
   background-size: cover;
 }
@@ -46,13 +52,15 @@
 /* Gestion des boutons */
 .btn-mise-en-oeuvre {
   border-radius: 0.4rem;
-  background-color: #132953;
+  border-color: #2C5367;
+  background-color: #2C5367;
   color: #eee;
 }
 
 .btn-mise-en-oeuvre:hover {
-  background-color: #009688;
-  color: #eee;
+  background-color: #92B9CD;
+  border-color: #92B9CD;
+  color: #2C5367 ;
 }
 
 .bouge { margin-top: 150px; }
