--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,3 +1,4 @@
+
 <body>
   <!-- Section accueil avec image de fond -->
   <header class="accueil-image">
@@ -18,10 +19,10 @@
           <div class="collapse navbar-collapse justify-content-start" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                <a class="nav-link active" aria-current="page" href="">Accueil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Joueurs</a>
+                <a class="nav-link active" aria-current="page" href="/liste-joueur">Joueurs</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Ajout</a>
