--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-header></app-header>
-<app-accueil></app-accueil>
+<app-header *ngIf="!isAccueilPage"></app-header>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
