--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -3,7 +3,7 @@
   <!-- Section accueil avec image de fond -->
   <header class="accueil-image">
     <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+      <nav class="navbar navbar-expand-lg bg-transparent">
         <div class="container-fluid">
           <!-- Logo -->
           <a class="navbar-brand" href="#">
@@ -22,19 +22,16 @@
                 <a class="nav-link active" aria-current="page" href="">Accueil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/liste-joueur">Joueurs</a>
+                <a class="nav-link active" aria-current="page" href="/liste-joueur"> Les Joueurs</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Ajout</a>
+                <a class="nav-link active" aria-current="page" href="/inscription">Inscription</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Sélection</a>
+                <a class="nav-link active" aria-current="page" href="/liste-match">Les Matchs</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Matchs</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Classement</a>
+                <a class="nav-link active" aria-current="page" href="/classement">Classement</a>
               </li>
             </ul>
           </div>
@@ -44,7 +41,7 @@
         <h1 class="accueil-titre">Tournois de Ping-Pong à Montreuil</h1>
         <p class="accueil-description">Préparez vos raquettes, aiguisez vos réflexes, les tournois de ping-pong sont de retour !</p>
         <div class="text-center">
-          <a href="#" class="btn btn-primary btn-mise-en-oeuvre">Inscrivez-vous dès maintenant</a>
+          <a href="/inscription" class="btn btn-primary btn-mise-en-oeuvre">Inscrivez-vous dès maintenant</a>
         </div>
       </div>
     </div>
