--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,49 @@
 <!-- Footer -->
 <footer class="footer">
-  <div class="container text-center py-3">
-    <span>© 2024 Ping-Pong Passion. Tous droits réservés.</span>
+  <div class="container py-4">
+    <div class="row">
+      <!-- Plan du site -->
+      <div class="col-md-6 col-lg-3 mb-3 mb-lg-0">
+          <a href="/plan-du-site">Plan du site</a>
+      </div>
+
+      <!-- Contribueurs -->
+      <div class="col-md-6 col-lg-3">
+        <h5 class="footer-heading">Contribueurs</h5>
+        <ul class="list-unstyled">
+          <li>Elsa Hadjadj</li>
+          <li>Quentin Bouetel</li>
+          <li>Rabab Boulkriat</li>
+        </ul>
+      </div>
+
+      <!-- RGPD -->
+      <div class="col-md-6 col-lg-3 mb-3 mb-md-0">
+        <h5 class="footer-heading">RGPD</h5>
+        <ul class="list-unstyled">
+          <li><a href="/politique-de-confidentialite">Politique de Confidentialité</a></li>
+          <li><a href="/gestion-des-cookies">Gestion des Cookies</a></li>
+          <li><a href="/mentions-legales">Mentions Légales</a></li>
+        </ul>
+      </div>
+
+      <!-- Nous contacter -->
+      <div class="col-md-6 col-lg-3">
+        <h5 class="footer-heading">Nous Contacter</h5>
+        <ul class="list-unstyled">
+          <li><a href="mailto:contact@pingpongpassion.com">E-mail :</a></li>
+          <li>Suivez-nous sur les réseaux sociaux</li>
+          <li>
+            <a href="#" class="footer-icon"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="footer-icon"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="footer-icon"><i class="fab fa-instagram"></i></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="text-center mt-4">
+      <span>© 2024 Ping-Pong Passion. Tous droits réservés.</span>
+    </div>
   </div>
 </footer>
