--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,6 +2,10 @@
   <header>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
+          <!-- Logo and link to the home page -->
+          <a class="navbar-brand" href="/">
+            <img src="/assets/images/logo-92px.jpg" alt="Logo" width="72" height="auto">
+          </a>
           <!-- Bouton pour afficher le menu sur les appareils mobiles -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -9,6 +13,7 @@
           <!-- Contenu du menu -->
           <div class="collapse navbar-collapse justify-content-start" id="navbarSupportedContent">
             <ul class="navbar-nav mb-2 mb-lg-0">
+
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="">Accueil</a>
               </li>
