--- a/src/app/liste-joueur/liste-joueur.component.css
+++ b/src/app/liste-joueur/liste-joueur.component.css
@@ -1,124 +1,125 @@
+/* Configuration de base de la page */
+/* Ce bloc définit la structure principale de la page, en utilisant flex pour organiser le contenu en colonnes et en s'assurant que la page utilise au moins toute la hauteur de la fenêtre. La couleur de fond est également définie ici pour un confort visuel. */
 :host {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: #F4F7F6; /* Couleur de fond plus douce pour le confort visuel */
+  background-color: #F4F7F6;
 }
 
-/* Style pour la barre de recherche */
+/* Barre de recherche */
+/* Cette section concerne la barre de recherche, incluant le champ de saisie et le bouton de recherche. Les styles garantissent que la barre de recherche est bien visible, accessible et facile à utiliser. */
 .search-bar {
   display: flex;
   justify-content: left;
-  margin: 20px 0; /* Ajoute de l'espace au-dessus et en dessous de la barre de recherche */
+  margin: 20px 0;
   padding: 10px;
 }
 
 .search-bar input[type="text"] {
-  width: 100%; /* Permet à la barre de recherche de s'étendre */
-  max-width: 400px; /* Largeur maximale pour éviter que la barre ne soit trop longue sur les grands écrans */
+  width: 100%;
+  max-width: 400px;
   padding: 10px;
-  border-radius: 5px 0 0 5px; /* Arrondit les coins gauche */
-  border: 2px solid #92B9CD; /* Utilise une couleur de votre thème pour la bordure */
-  outline: none; /* Supprime l'outline lors de la sélection */
+  border-radius: 5px 0 0 5px;
+  border: 2px solid #92B9CD;
+  outline: none;
 }
 
 .search-button {
   padding: 10px 15px;
-  border-radius: 0 5px 5px 0; /* Arrondit les coins droit */
-  border: 2px solid #92B9CD; /* Harmonise la bordure avec la barre de recherche */
-  background-color: #2C5367; /* Couleur de fond plus foncée pour un meilleur contraste */
-  color: white; /* Texte blanc pour le contraste */
-  cursor: pointer; /* Change le curseur en pointeur */
-  outline: none; /* Supprime l'outline lors de la sélection */
+  border-radius: 0 5px 5px 0;
+  border: 2px solid #92B9CD;
+  background-color: #2C5367;
+  color: white;
+  cursor: pointer;
+  outline: none;
 }
 
 .search-button:hover {
-  background-color: #1B3B4F; /* Couleur plus foncée au survol */
+  background-color: #1B3B4F;
 }
 
 /* Cartes des joueurs */
+/* Les styles ici sont destinés à la présentation des cartes des joueurs. Ils définissent la manière dont les cartes sont affichées, leur apparence générale et leur comportement au survol. */
 .player-cards {
   flex-grow: 1;
   display: flex;
-  flex-wrap: wrap; /* Permet aux cartes de passer à la ligne suivante si nécessaire */
-  justify-content: center; /* Centre les cartes horizontalement */
-  gap: 20px; /* Espacement entre les cartes */
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
   padding: 20px;
 }
 
 .card-custom {
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* Ombre subtile pour une apparence en élévation */
-  transition: transform 0.3s ease, box-shadow 0.3s ease; /* Transition douce pour le survol */
-  margin-bottom: 1rem; /* Espace ajouté en bas de chaque carte */
-  margin-left: 0.5rem; /* Espace ajouté à gauche de chaque carte */
-  margin-right: 0.5rem; /* Espace ajouté à droite de chaque carte */
-  box-shadow: 2px 2px 2px #222; /* Ombre de la carte pour l'effet de profondeur */
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  margin-bottom: 1rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
 
 .card-custom:hover {
-  transform: translateY(-5px); /* Légère élévation au survol */
-  box-shadow: 0 6px 12px rgba(0,0,0,0.15); /* Ombre plus prononcée au survol */
+  transform: translateY(-5px);
+  box-shadow: 0 6px 12px rgba(0,0,0,0.15);
 }
 
 .card-body-custom {
-  background-color: #ECF0F4; /* Couleur de fond des cartes pour un contraste doux */
-  padding: 15px; /* Espace intérieur des cartes */
+  background-color: #ECF0F4;
+  padding: 15px;
 }
 
 .card-title-custom, .card-title-second {
-  margin-bottom: 15px; /* Espacement sous les titres */
-  color: #2C5367; /* Couleur des titres pour correspondre à votre thème */
-  font-size: 1rem; /* Réduisez la taille de la police ici */
+  margin-bottom: 15px;
+  color: #2C5367;
+  font-size: 1rem;
 }
 
 /* Pagination */
+/* La pagination est traitée dans cette section, avec des styles pour la rendre intuitive et cohérente avec le reste du design. */
 .paginator {
   display: flex;
   align-items: center;
   padding: 20px;
-  background-color: #ECF0F4; /* Fond de la pagination pour le distinguer */
+  background-color: #ECF0F4;
   justify-content: flex-end;
 }
 
-.paginator select {
-  margin-left: 0.2rem;
-  margin-right: 0.2rem;
-  padding: 5px 10px; /* Plus d'espace intérieur pour faciliter la sélection */
-  border-radius: 5px; /* Bords arrondis */
-  border: 2px solid #92B9CD; /* Bordure de couleur de thème */
+.paginator select, .paginator button {
+  margin: 0 0.2rem;
+  padding: 5px 10px;
+  border-radius: 5px;
+  border: 2px solid #92B9CD;
 }
 
 .paginator button {
-  margin-left: 0.2rem;
-  margin-right: 0.2rem;
-  padding: 5px 10px;
-  border-radius: 5px;
-  border: 2px solid #92B9CD; /* Bordure de couleur de thème */
-  background-color: #2C5367; /* Couleur de fond pour correspondre à votre thème */
-  color: white; /* Texte blanc pour le contraste */
+  background-color: #2C5367;
+  color: white;
 }
 
 .paginator button[disabled] {
-  background-color: #BCCED9; /* Couleur plus claire pour les boutons désactivés */
+  background-color: #BCCED9;
   cursor: not-allowed;
 }
 
 .paginator button:hover:not([disabled]) {
-  background-color: #1B3B4F; /* Couleur plus foncée au survol */
+  background-color: #1B3B4F;
 }
 
+/* Icone de recherche personnalisée */
 .bi-search-custom {
   font-size: 1.2rem;
   color: #fff;
   padding-right: 0.2rem;
 }
 
+/* Adaptations pour les petits écrans */
+/* Les styles contenus dans cette requête média visent à optimiser l'affichage sur les appareils à écran réduit, en ajustant certains éléments pour une meilleure expérience utilisateur. */
 @media (max-width: 575.98px) {
   .sm-justify-content-center {
     display: flex;
     justify-content: center;
   }
-  .hide{
+  .hide {
     display: none;
   }
 }
