--- a/src/app/inscription/inscription.component.html
+++ b/src/app/inscription/inscription.component.html
@@ -9,46 +9,63 @@
     </div>
   </div>
 
+  <!-- Message de succès -->
+  <div *ngIf="messageSucces" class="alert alert-success">
+    {{ messageSucces }}
+  </div>
+
   <div class="container mt-3">
     <form #inscriptionForm="ngForm" (ngSubmit)="onSubmit(inscriptionForm)" novalidate>
       <div class="note-obligatoire">
         <p>Les champs marqués d'un <span class="required-asterisk">*</span> sont obligatoires.</p>
       </div>
-      
+
       <fieldset class="card mb-4 p-4">
         <legend class="card-header mb-3 fw-bold">Mes Informations Personnelles</legend>
         <div class="card-body">
           <div class="row g-3">
-            <!-- Genre -->
-            <div class="col-md-4">
-              <label for="genre" class="form-label">Genre <span class="required-asterisk">*</span></label>
-              <select class="form-select" id="genre" name="genre" [(ngModel)]="inscriptionModel.genre" required>
-                <option value="">Choisir...</option>
-                <option value="Homme">Homme</option>
-                <option value="Femme">Femme</option>
-                <option value="Autre">Autre</option>
-              </select>
+         <!-- Genre -->
+          <div class="col-md-4">
+            <label for="genre" class="form-label">Genre <span class="required-asterisk">*</span></label>
+            <select class="form-select" id="genre" name="genre" [(ngModel)]="inscriptionModel.genre" #genre="ngModel" required>
+              <option value="">Choisir...</option>
+              <option value="Homme">Homme</option>
+              <option value="Femme">Femme</option>
+              <option value="Autre">Autre</option>
+            </select>
+            <div *ngIf="genre.touched && genre.invalid" class="alert alert-danger">
+              Le champ Genre est obligatoire.
             </div>
-  
-            <!-- Nom -->
+          </div>
+
+           <!-- Nom -->
             <div class="col-md-4">
               <label for="nom" class="form-label">Nom <span class="required-asterisk">*</span></label>
-              <input type="text" class="form-control" id="nom" name="nom" [(ngModel)]="inscriptionModel.nom" placeholder="Votre nom" required>
+              <input type="text" class="form-control" id="nom" name="nom" [(ngModel)]="inscriptionModel.nom" #nom="ngModel" required placeholder="Votre nom">
+              <div *ngIf="nom.touched && nom.invalid" class="alert alert-danger">
+                Le champ Nom est obligatoire.
+              </div>
             </div>
-  
+
             <!-- Prénom -->
             <div class="col-md-4">
               <label for="prenom" class="form-label">Prénom <span class="required-asterisk">*</span></label>
-              <input type="text" class="form-control" id="prenom" name="prenom" [(ngModel)]="inscriptionModel.prenom" placeholder="Votre prénom" required>
+              <input type="text" class="form-control" id="prenom" name="prenom" [(ngModel)]="inscriptionModel.prenom"  #prenom="ngModel" required placeholder="Votre prénom">
+            <div *ngIf="prenom.touched && prenom.invalid" class="alert alert-danger">
+              Le champ Prénom est obligatoire.
             </div>
-          </div>
-  
+            </div>
+
           <!-- Date de Naissance -->
           <div class="row g-3 mt-3">
             <div class="col-md-6">
               <label for="dateNaissance" class="form-label">Date de Naissance <span class="required-asterisk">*</span></label>
-              <input type="date" class="form-control" id="dateNaissance" name="dateNaissance" [(ngModel)]="inscriptionModel.dateNaissance" required>
+              <input type="date" class="form-control" id="dateNaissance" name="dateNaissance" [(ngModel)]="inscriptionModel.dateNaissance"  #dateNaissance="ngModel" required>
             </div>
+            <div *ngIf="dateNaissance.touched && dateNaissance.invalid" class="alert alert-danger">
+              Le champ Date de Naissance est obligatoire.
+            </div>
+          </div>
           </div>
         </div>
       </fieldset>
@@ -56,25 +73,66 @@
       <fieldset class="card mb-4 p-4">
         <legend class="card-header mb-3 fw-bold">Mes Coordonnées</legend>
         <div class="card-body">
-          <!-- Adresse -->
-          <div class="mb-3">
-            <label for="adresse" class="form-label fw-bold">Adresse <span class="required-asterisk">*</span></label>
-            <input type="text" class="form-control" id="adresse" name="adresse" [(ngModel)]="inscriptionModel.adresse" placeholder="Votre adresse" required>
-          </div>
+            <!-- Adresse -->
+            <div class="mb-3">
+              <label for="adresse" class="form-label fw-bold">Adresse <span class="required-asterisk">*</span></label>
+              <input type="text" class="form-control" id="adresse" name="adresse" [(ngModel)]="inscriptionModel.adresse" #adresse="ngModel" required placeholder="Votre adresse">
+              <div *ngIf="adresse.touched && adresse.invalid" class="alert alert-danger">
+              Le champ Adresse est obligatoire.
+              </div>
+            </div>
 
-          <!-- Code Postal, Ville, Pays -->
+            <!-- Code Postal, Ville, Pays - Ajout de 'mb-3' pour la marge en bas -->
+            <div class="row g-3 mb-3">
+              <div class="col-md-4">
+                <label for="codePostale" class="form-label fw-bold">Code Postal <span class="required-asterisk">*</span></label>
+                <input type="number" class="form-control" id="codePostale" name="codePostale" [(ngModel)]="inscriptionModel.codePostale"  #codePostale="ngModel" required placeholder="Code Postal">
+                <div *ngIf="codePostale.touched && codePostale.invalid" class="alert alert-danger">
+                  Le champ Code Postale est obligatoire.
+                </div>
+              </div>
+
+              <div class="col-md-4">
+                <label for="ville" class="form-label fw-bold">Ville <span class="required-asterisk">*</span></label>
+                <input type="text" class="form-control" id="ville" name="ville" [(ngModel)]="inscriptionModel.ville"  #ville="ngModel" required placeholder="Ville">
+                <div *ngIf="ville.touched && ville.invalid" class="alert alert-danger">
+                  Le champ Ville est obligatoire.
+                </div>
+              </div>
+
+              <div class="col-md-4">
+                <label for="pays" class="form-label fw-bold">Pays <span class="required-asterisk">*</span></label>
+                <ng-select [items]="paysListe"
+                    bindLabel="nom"
+                    bindValue="code"
+                    placeholder="Choisir..."
+                    [(ngModel)]="inscriptionModel.pays"
+                    [typeahead]="filtrePays"
+                    name="pays"
+                    #pays="ngModel"required>
+                </ng-select>
+                <div *ngIf="pays.touched && pays.invalid" class="alert alert-danger">
+                  Le champ Pays est obligatoire.
+                </div>
+              </div>
+            </div>
+
+          <!-- Courriel et Téléphone sur la même ligne -->
           <div class="row g-3">
-            <div class="col-md-4">
-              <label for="codePostale" class="form-label fw-bold">Code Postal <span class="required-asterisk">*</span></label>
-              <input type="number" class="form-control" id="codePostale" name="codePostale" [(ngModel)]="inscriptionModel.codePostale" placeholder="Code Postal" required>
+            <div class="col-md-8">
+              <label for="courriel" class="form-label fw-bold">Courriel <span class="required-asterisk">*</span></label>
+              <input type="email" class="form-control" id="courriel" name="courriel" [(ngModel)]="inscriptionModel.courriel"  #courriel="ngModel" required placeholder="Votre email">
+              <div *ngIf="courriel.touched && courriel.invalid" class="alert alert-danger">
+                Le champ Courriel est obligatoire.
+              </div>
             </div>
+
             <div class="col-md-4">
-              <label for="ville" class="form-label fw-bold">Ville <span class="required-asterisk">*</span></label>
-              <input type="text" class="form-control" id="ville" name="ville" [(ngModel)]="inscriptionModel.ville" placeholder="Ville" required>
-            </div>
-            <div class="col-md-4">
-              <label for="pays" class="form-label fw-bold">Pays <span class="required-asterisk">*</span></label>
-              <input type="text" class="form-control" id="pays" name="pays" [(ngModel)]="inscriptionModel.pays" placeholder="Pays" required>
+              <label for="telephone" class="form-label fw-bold">Téléphone <span class="required-asterisk">*</span></label>
+              <input type="tel" class="form-control" id="telephone" name="telephone" [(ngModel)]="inscriptionModel.telephone"  #telephone="ngModel" required placeholder="Votre téléphone" pattern="[0-9]{10}">
+              <div *ngIf="telephone.touched && telephone.invalid" class="alert alert-danger">
+                Le champ  est obligatoire.
+              </div>
             </div>
           </div>
         </div>
@@ -86,11 +144,14 @@
           <!-- Licence & Classement -->
           <div class="mb-3">
             <label for="licence" class="form-label fw-bold">Licence <span class="required-asterisk">*</span></label>
-            <select class="form-select" id="licence" name="licence" [(ngModel)]="inscriptionModel.licence" required>
+            <select class="form-select" id="licence" name="licence" [(ngModel)]="inscriptionModel.licence" #licence="ngModel" required>
               <option value="">Choisir...</option>
               <option value="Amateur">Amateur</option>
               <option value="Pro">Pro</option>
             </select>
+            <div *ngIf="licence.touched && licence.invalid" class="alert alert-danger">
+              Le champ Licence est obligatoire.
+            </div>
           </div>
 
           <div class="mb-3">
@@ -111,23 +172,12 @@
           </div>
         </div>
       </div>
-       <!-- Message de succès -->
-      <div *ngIf="messageSucces" class="alert alert-success">
-        {{ messageSucces }}
+      <div *ngIf="!inscriptionModel.confirmation && inscriptionForm.submitted" class="alert alert-danger">
+        Vous devez confirmer que toutes les informations déclarées sont correctes avant de soumettre le formulaire.
       </div>
-
-      <!-- Message d'erreur pour un utilisateur déjà inscrit -->
-      <div *ngIf="estDejaInscrit" class="alert alert-warning">
-        {{ messageErreur }}
-      </div>
-
-      <!-- Autre message d'erreur -->
-      <div *ngIf="messageErreur && !estDejaInscrit" class="alert alert-danger">
-        {{ messageErreur }}
-      </div>
-
 
       <button type="submit" class="btn btn-submit">Soumettre</button>
+      
     </form>
   </div>
 </div>
